Added sample lizard Image element. Created wall, and ceiling and ground static objects

--- a/slHackathonGame/slHackathonGame.csproj
+++ b/slHackathonGame/slHackathonGame.csproj
@@ -102,13 +102,15 @@
     <Content Include="ApplicationIcon.png">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
+    <Content Include="Assets\Lizard.png">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
     <Content Include="Background.png">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
     <Content Include="SplashScreenImage.jpg" />
   </ItemGroup>
   <ItemGroup>
-    <Folder Include="Assets\" />
     <Folder Include="Helpers\" />
     <Folder Include="UserControls\" />
   </ItemGroup>
